fixed the white space at the bottom of the authorization page and single view page

--- a/src/components/SingleView/SingleView.scss
+++ b/src/components/SingleView/SingleView.scss
@@ -1,7 +1,8 @@
-.singleview-container {
-  margin-left: 300px;
-  margin-bottom: 10px;
-}
+ .singleview-container {
+   margin-left: 300px;
+   margin-bottom: 10px;
+   height: 100vh;
+ }
 
 .single-image-view {
   max-width: 500px;
