--- a/src/components/pages/Auth/Auth.scss
+++ b/src/components/pages/Auth/Auth.scss
@@ -2,6 +2,7 @@
   padding-top: 30px;
   margin-left:auto;
   margin-right:auto;
+  height: 100vh;
 }
 
 .auth-logo {
